tests/golden/type_errors/generic_lambda_conflicting_inference.cd
let same = fun<T>(left: T, right: T): T { return left; };
same(1, "x");
