tests/golden/type_errors/generic_lambda_conflicting_inference.err
Type error at 2:12: type parameter T inferred as number and string
  same(1, "x");
             ^
